testsuite/tests/ghc-regress/indexed-types/should_compile/RankN1.hs
{-# LANGUAGE TypeFamilies, RankNTypes #-}

module RankN1 where

type family F x

foo, bar :: (forall x. x -> x) -> F x
foo = bar
bar = undefined


